<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="ru.hh.school.testjob.ApplicantActivity">

    <TextView
            android:text="@string/label_activity_applicant"
            android:textSize="@dimen/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/label_full_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

        <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/hint_full_name"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/label_birth_day"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

        <EditText
                android:focusable="false"
                android:id="@+id/birth_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birth_day"
                android:onClick="onclick"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/label_sex"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

        <Spinner
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/label_office"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

        <EditText
                android:id="@+id/office"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoCorrect|textCapSentences"
                android:hint="@string/hint_office"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/label_wages"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

        <EditText
                android:id="@+id/wages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="10000"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/label_phone_number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

        <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
			    android:hint="+79251234567"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/label_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="ivan@email.com"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

        <TextView
                android:id="@+id/error_message"
                android:textColor="@android:color/holo_red_light"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

        <Button
                android:text="@string/label_send_cv"
                android:id="@+id/send_cv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sendCV"
                android:layout_gravity="right|bottom"
                />
    </LinearLayout>
</LinearLayout>

