<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_activity_employer"
                android:textSize="@dimen/title"
                />

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

            <TextView
                    android:textSize="16dp"
                    android:text="@string/label_full_name"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

            <TextView
                    android:textSize="16dp"
                    android:id="@+id/full_name"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

            <TextView
                    android:textSize="16dp"
                    android:text="@string/label_birth_day"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

            <TextView
                    android:textSize="16dp"
                    android:id="@+id/birth_day"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

            <TextView
                    android:textSize="16dp"
                    android:text="@string/label_sex"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

            <TextView
                    android:textSize="16dp"
                    android:id="@+id/sex"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

            <TextView
                    android:textSize="16dp"
                    android:text="@string/label_office"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

            <TextView
                    android:textSize="16dp"
                    android:id="@+id/office"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

            <TextView
                    android:textSize="16dp"
                    android:text="@string/label_wages"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

            <TextView
                    android:textSize="16dp"
                    android:id="@+id/wages"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

            <TextView
                    android:textSize="16dp"
                    android:text="@string/label_phone_number"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

            <TextView
                    android:textSize="16dp"
                    android:id="@+id/phone_number"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />
        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                >

            <TextView
                    android:textSize="16dp"
                    android:text="@string/label_email"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

            <TextView
                    android:textSize="16dp"
                    android:id="@+id/email"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >

            <TextView
                    android:text="@string/label_activity_2_mail"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/title"
                    />

            <EditText
                    android:id="@+id/answer_mail"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:minLines="5"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    />

            <Button
                    android:id="@+id/send_answer"
                    android:text="@string/label_send_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="sendAnswer"
                    android:layout_gravity="right"
                    />

        </LinearLayout>


    </LinearLayout>
</ScrollView>